--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
+    <div id="root1"></div>
+    <div id="root2"></div>
+
     <h1>Getting started with React</h1>
 
+    <!-- Creating React Elements -->
+    <script type="text/javascript">
+        let title =  React.createElement(
+                "ul",null,"Welcome to ReactJs!!!!"
+            );
+        ReactDOM.render(
+           title, 
+            document.getElementById("root")
+        );
+    </script>
+    
+    <!-- React using JSX -->
     <script type="text/javascript">
         let heading =  React.createElement(
                 "ul",
@@ -24,8 +40,21 @@
             );
         ReactDOM.render(
            heading, 
-            document.getElementById("root")
+            document.getElementById("root1")
         );
+    </script>
+
+    <!-- Reactjs Using Babel -->
+    <script type="text/babel">
+        ReactDOM.render(
+            <ul>
+                <li>Test1</li>
+                <li>Test2</li>
+                <li>Test3</li>
+            </ul>,
+            document.getElementById("root2")
+        );
+
     </script>
 </body>
 </html>
