Adding keys to list items in react

--- a/react_components.html
+++ b/react_components.html
@@ -14,27 +14,58 @@
     <div id="root"></div>
 
     <script type="text/babel">
-            function Header() {
+            function Header(props) {
                 return (
                     <header>
-                        <h1>Sos Kitchen</h1>
+                        <h1>{props.name} Kitchen</h1>
                         </header>
                 );
             }
 
-            function Main() {
+            function Main(props) {
                 return (
                     <section>
-                        <p> We serve the most delicious food</p>
+                        <p>We have an {props.adjective} foods: </p>
+                        <ul>
+                            {props.dishes.map((dish) => (
+                                <li key={dish.id}>{dish.title}</li>
+                            ))}
+                        </ul>
                         </section>
                 )
             }
 
+            function Footer(props) {
+                return (
+                    <footer>
+                        <p>Copyright {props.year} </p>
+                        </footer>
+                );
+            }
+
+            const dishes = [
+                "Ugali and Matumbo",
+                "Rice and Beans",
+                "Macoroni and Cheese",
+                "Pilau and Meat Stew",
+                "Pizza"
+            ];
+
+            const dishObjects = dishes.map(
+                (dish, i) => ({
+                    id:i,
+                    title: dish
+                }));
+
             function App() {    
                 return  (
                     <div>
-                        <Header />
-                        <Main />
+                        <Header name="Sos" />
+                        <Main 
+                            adjective="Amazing"
+                            dishes={dishObjects}
+                        />
+                        <Footer year={new Date().getFullYear()} />
                     </div>
                 );
             }   
