Use React.Fragment instead of root in app

--- a/react_components.html
+++ b/react_components.html
@@ -25,6 +25,11 @@
             function Main(props) {
                 return (
                     <section>
+                        <img 
+                        width={300}
+                            src="restaurant.jpeg" 
+                            alt="Restaurant Image"
+                            />
                         <p>We have an {props.adjective} foods: </p>
                         <ul>
                             {props.dishes.map((dish) => (
@@ -59,14 +64,14 @@
 
             function App() {    
                 return  (
-                    <div>
+                    <React.Fragment>
                         <Header name="Sos" />
                         <Main 
                             adjective="Amazing"
                             dishes={dishObjects}
                         />
                         <Footer year={new Date().getFullYear()} />
-                    </div>
+                    </React.Fragment>
                 );
             }   
         ReactDOM.render(
